--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Tajawal&display=swap');
+
 @media (max-width: 1000px) {
   .hum {
     display: block !important;
@@ -68,7 +70,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: tajawal;
+  font-family: 'Tajawal', sans-serif;
 }
 
 a {
